[gd_scene load_steps=2 format=3 uid="uid://bcw2442lg1ymu"]

[ext_resource type="Script" path="res://main.gd" id="1"]

[node name="Main" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
offset_left = 24.0
offset_top = 12.0
offset_right = 197.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 16
text = "Available Benchmarks:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="Tree" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 40.0
offset_right = -18.0
offset_bottom = -45.0
hide_root = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectAll" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -592.0
offset_top = -38.0
offset_right = -510.0
offset_bottom = -9.0
rect_pivot_offset = Vector2(41, 20)
text = "Select All"

[node name="SelectNone" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -499.0
offset_top = -38.0
offset_right = -396.0
offset_bottom = -9.0
rect_pivot_offset = Vector2(41, 20)
text = "Select None"

[node name="CopyJSON" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -344.0
offset_top = -38.0
offset_right = -153.0
offset_bottom = -9.0
rect_pivot_offset = Vector2(41, 20)
text = "Copy JSON to clipboard"

[node name="Run" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -41.0
offset_right = -27.0
offset_bottom = -7.0
rect_pivot_offset = Vector2(41, 20)
theme_override_font_sizes/font_size = 20
disabled = true
text = "Run
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
offset_left = 35.0
offset_top = 563.0
offset_right = 155.0
offset_bottom = 603.0
text = "Test Time (sec)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestTime" type="SpinBox" parent="."]
offset_left = 160.0
offset_top = 560.0
offset_right = 342.0
offset_bottom = 593.0
min_value = 1.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_edited" from="Tree" to="." method="_on_Tree_item_edited"]
[connection signal="pressed" from="SelectAll" to="." method="_on_SelectAll_pressed"]
[connection signal="pressed" from="SelectNone" to="." method="_on_SelectNone_pressed"]
[connection signal="pressed" from="CopyJSON" to="." method="_on_CopyJSON_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_Run_pressed"]
